--- a/test_it.yml
+++ b/test_it.yml
@@ -3,6 +3,7 @@
   gather_facts: false
   vars:
     name: test-ecs-cluster
+    clustername: default
   tasks:
     - name: cloudformation
       cloudformation:
@@ -14,7 +15,7 @@
           ServiceName: "{{ name }}"
           Environment: "{{environ}}"
           Version: "{{version}}"
-          ClusterName: "default"
+          ClusterName: "{{clustername}}"
       register: ecs_task
 
     - debug: var=ecs_task
