--- a/test_it.yml
+++ b/test_it.yml
@@ -19,18 +19,18 @@
       register: ecs_task
 
     - debug: var=ecs_task
-    # - name: RUN a task on Fargate
-    #   ecs_task:
-    #       operation: run
-    #       cluster: console-sample-app-static-cluster
-    #       task_definition: console-sample-app-static-taskdef
-    #       task: "arn:aws:ecs:us-west-2:172139249013:task/3f8353d1-29a8-4689-bbf6-ad79937ffe8a"
-    #       started_by: kevinisthebest
-    #       launch_type: FARGATE
-    #       network_configuration:
-    #         subnets:
-    #         - subnet-abcd1234
-    #         security_groups:
-    #         - sg-aaaa1111
-    #         - my_security_group
-    #   register: task_output
+    - name: RUN a task on Fargate
+      ecs_task:
+        operation: run
+        cluster: "{{clustername}}"
+        task_definition: console-sample-app-static-taskdef
+        task: "arn:aws:ecs:us-west-2:172139249013:task/3f8353d1-29a8-4689-bbf6-ad79937ffe8a"
+        started_by: kevinisthebest
+        launch_type: FARGATE
+        network_configuration:
+          subnets:
+          - subnet-abcd1234
+          security_groups:
+          - sg-aaaa1111
+          - my_security_group
+      register: task_output
