--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   - name: build_docker
     image: plugins/ecr
     environment:
-      - IAM_ROLE=arn:aws:iam::601394826940:role/cloudformation
+      IAM_ROLE: arn:aws:iam::601394826940:role/cloudformation
     settings:
       repo: 601394826940.dkr.ecr.us-east-2.amazonaws.com/load-tester
       region: us-east-2
