--- a/test_it.yml
+++ b/test_it.yml
@@ -23,14 +23,14 @@
       ecs_task:
         operation: run
         cluster: "{{clustername}}"
-        task_definition: console-sample-app-static-taskdef
-        task: "arn:aws:ecs:us-west-2:172139249013:task/3f8353d1-29a8-4689-bbf6-ad79937ffe8a"
+        task_definition: "test-load"
         started_by: kevinisthebest
+        count: 1
         launch_type: FARGATE
+        region: "{{region}}"
         network_configuration:
           subnets:
-          - subnet-abcd1234
+          - subnet-0c00ee77
           security_groups:
-          - sg-aaaa1111
-          - my_security_group
+          - sg-eaff2583
       register: task_output
