--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,9 @@ steps:
       region: us-west-2
       tags:
         - latest
-        - ${DRONE_COMMIT}
+        - ${DRONE_TAG}
+    when:
+      event: [tag]
 
 
   - name: deploy_staging
@@ -21,9 +23,10 @@ steps:
       AWS_DEFAULT_REGION: us-west-2
     commands:
      - ansible-playbook -i ansible_connection=localhost test_it.yml -e region=us-west-2 -e version=${DRONE_COMMIT} -e environ=staging -vvv
+    when:
+      branch: master
 
 trigger:
-  branch: master
   event: push
 #
 # node:
