--- a/test_it.yml
+++ b/test_it.yml
@@ -45,10 +45,11 @@
         count: 1
         overrides:
           containerOverrides:
-            - environment:
-              - name: S3_LOCATION
-                value: s3://kloudcover/tools/application-profiling/test.yml
-          name: "{{ name }}"
+            - name: "{{ name }}"
+              environment:
+                - name: S3_LOCATION
+                  value: s3://kloudcover/tools/application-profiling/test.yml
+
         launch_type: FARGATE
         region: "{{region}}"
         network_configuration:
