updated deploy for east

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,8 +5,6 @@ name: build-load-tester
 steps:
   - name: build_docker
     image: plugins/ecr
-    # environment:
-    #   IAM_ROLE: arn:aws:iam::601394826940:role/cloudformation
     settings:
       repo: 601394826940.dkr.ecr.us-west-2.amazonaws.com/load-tester
       region: us-west-2
@@ -15,18 +13,23 @@ steps:
         - ${DRONE_TAG}
     when:
       event: [tag]
-
-
-  - name: deploy_staging
-    image: ktruckenmiller/ansible
-    environment:
-      AWS_DEFAULT_REGION: us-west-2
-    commands:
-     - ansible-playbook -i ansible_connection=localhost test_it.yml -e region=us-west-2 -e version=0.0.3 -e environ=staging -vvv
+  - name: build_docker_east2
+    image: plugins/ecr
+    settings:
+      repo: 601394826940.dkr.ecr.us-east-2.amazonaws.com/load-tester
+      region: us-east-2
+      tags:
+        - latest
+        - ${DRONE_TAG}
     when:
-      branch: master
-      event: push
+      event: [tag]
 
-#
-# node:
-#   instance: truckstop
+  # - name: deploy_staging
+  #   image: ktruckenmiller/ansible
+  #   environment:
+  #     AWS_DEFAULT_REGION: us-west-2
+  #   commands:
+  #    - ansible-playbook -i ansible_connection=localhost test_it.yml -e region=us-west-2 -e version=0.0.3 -e environ=staging -vvv
+  #   when:
+  #     branch: master
+  #     event: push
